# Photon-v2

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Photon-v2.sln  README.md  build.bat  cpp.hint  engine_vs_post_build_script.bat  pom.xml  setup.bat  setup.sh  vs_engine_debug_post_build_script.bat  vs_engine_release_post_build_script.bat  vs_jni_debug_post_build_script.bat  vs_jni_release_post_build_script.bat
Application/: Application.vcxproj  CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.h  StaticImageRenderer.cpp  StaticImageRenderer.h  main.cpp
Editor/Editor/: CMakeLists.txt
Editor/Editor/Source/: main.cpp
Editor/EditorLib/: CMakeLists.txt  doxygen.config
Editor/EditorLib/Include/: ph_editor.h
Editor/EditorLib/Resource/Font/: README.md
Editor/EditorLib/Resource/Image/: README.md
Editor/EditorLib/Source/: editor_lib_config.h
Editor/EditorLib/Source/Api/: imgui_main.h  ph_editor.cpp
Editor/EditorLib/Source/App/: AppSettings.cpp  AppSettings.h  Application.cpp  Application.h  DimensionHints.cpp  DimensionHints.h  EGraphicsAPI.h  EditContext.h  Editor.cpp  Editor.h  Editor.ipp  EditorEventQueue.cpp  EditorEventQueue.h  MainThreadUpdateContext.h  ModuleAttachmentInfo.h  TEventDispatcher.h
Editor/EditorLib/Source/Designer/: AbstractDesignerObject.cpp  AbstractDesignerObject.h  AbstractDesignerObject.ipp  DesignerObject.cpp  DesignerObject.h  DesignerObject.ipp  DesignerScene.cpp  DesignerScene.h  DesignerScene.ipp  FlatDesignerObject.cpp  FlatDesignerObject.h  HierarchicalDesignerObject.cpp  HierarchicalDesignerObject.h  HierarchicalDesignerObject.ipp  NodeObject.cpp  NodeObject.h  NoteDesignerObject.cpp  NoteDesignerObject.h  NoteObject.cpp  NoteObject.h  TextualNoteObject.cpp  TextualNoteObject.h  ViewportCamera.cpp  ViewportCamera.h  designer_fwd.h
Editor/EditorLib/Source/EditorCore/: EKeyCode.h  EMouseCode.h  FileSystemExplorer.cpp  FileSystemExplorer.h  IDGenerator.cpp  IDGenerator.h  Program.cpp  (+7 more)
Editor/EditorTest/: CMakeLists.txt
Editor/EditorTest/Source/: main.cpp
Engine/CEngine/: CMakeLists.txt  README.md  doxygen.config
Engine/CEngine/Include/: ph_c_core.h  ph_c_core_types.h
Engine/Common/: CMakeLists.txt  README.md  doxygen.config
Engine/Common/Documentation/: namespace_ph_detail.dox  namespace_ph_detail_core_logging.dox  namespace_ph_string_utils.dox
Engine/CommonTest/: CMakeLists.txt
Engine/CommonTest/Source/: main.cpp
EngineTest/: CMakeLists.txt  EngineTest.vcxproj  EngineTest.vcxproj.filters
EngineTest/Source/: config.h  constants_for_test.h  main.cpp  util.h
EngineTest/Source/Common/: math_basics_test.cpp  os_test.cpp  primitive_type_test.cpp
EngineTest/Source/Core/: color_conversion_test.cpp  primitive_intersection_test.cpp  quantity_test.cpp  surface_optics_test.cpp
EngineTest/Source/DataIO/: PlyFile_test.cpp  exr_file_io_test.cpp  ies_file_loading_test.cpp  input_packet_test.cpp
EngineTest/Source/FileIO/: exr_file_io.cpp  exr_file_io_test.cpp  file_loading_test.cpp  ies_file_loading_test.cpp  input_packet_test.cpp
EngineTest/Source/Frame/: FrameProcessor_test.cpp  TFrame_test.cpp
EngineTest/Source/Math/: Math_test.cpp  TArithmeticArray_test.cpp  TMatrix2_test.cpp  TMatrix3_test.cpp  TMatrix4_test.cpp  TOrthonormalBasis3_test.cpp  TVector2_test.cpp  TVector3_test.cpp  color_conversion_test.cpp  distribution_test.cpp  hash_test.cpp  math_test.cpp  random_test.cpp
EngineTest/Source/SDL/: SdlResourceLocator_test.cpp  TSdlAnyInstance_test.cpp  sdl_helpers_test.cpp  sdl_traits_test.cpp
EngineTest/Source/Utility/: FixedSizeThreadPool_test.cpp  MemoryArena_test.cpp  TArrayAsVector_test.cpp  TBitFlags_test.cpp  TFixedIntegerMap_test.cpp  TFixedSizeStack_test.cpp  TFixedSizeVector_test.cpp  TFunction_test.cpp  TFunctor_test.cpp  TMRSWResource_test.cpp  TSortedVector_test.cpp  TSparseIntVector_test.cpp  TStableIndexDenseVector_test.cpp  concurrent_test.cpp  fixed_map_test.cpp  has_member_test.cpp  string_utils_test.cpp  traits_test.cpp  utility_test.cpp
JNI/: CMakeLists.txt  JNI.vcxproj  JNI.vcxproj.filters
JNI/Source/: JFloatRef.cpp  JFloatRef.h  JIntRef.cpp  JIntRef.h  JLongRef.cpp  JLongRef.h  JObject.h  JniHelper.h  JniUtil.h  Ph.cpp  core_Ph.cpp  core_Ph.h  java_type_signature.h  photonApi_Ph.cpp  photonApi_Ph.h
PhotonCLI/: BlenderStaticImageRenderer.h  CMakeLists.txt  CliStaticImageRenderer.h  CommandLineArguments.cpp  CommandLineArguments.h  ProcessedArguments.cpp  ProcessedArguments.h  README.md  StaticImageRenderer.cpp  StaticImageRenderer.h  doxygen.config  main.cpp  util.cpp  util.h
PhotonCLI/Source/: BlenderStaticImageRenderer.cpp  BlenderStaticImageRenderer.h  CliStaticImageRenderer.cpp  ProcessedArguments.cpp  ProcessedArguments.h  StaticImageRenderer.cpp  StaticImageRenderer.h  main.cpp  util.cpp  util.h
PhotonEditor/: CMakeLists.txt
PhotonEditor/Source/: main.cpp
PhotonEditor/Source/App/: AppSettings.h  Application.cpp  Application.h
PhotonEditor/Source/Core/: AppModule.h
PhotonEditor/Source/EditorCore/: Program.h  core.cpp
PhotonEditor/Source/Event/: Event.cpp  Event.h
PhotonEditor/Source/Physics/: PhysicsModule.h
PhotonEditor/Source/Platform/: Display.h  Input.h  Platform.cpp  Platform.h  PlatformDisplay.h  PlatformInput.h
PhotonEditor/Source/RenderCore/: GHI.cpp  GHI.h
SDLGen/: CMakeLists.txt
SDLGen/Include/: ph_sdlgen.h
SDLGen/Source/Api/: ph_sdlgen.cpp
SDLGen/Source/InterfaceGen/: EInterfaceGenerator.h  InterfaceGenerator.cpp  InterfaceGenerator.h
SDLGenerator/SDLGen/: CMakeLists.txt
SDLGenerator/SDLGen/Config/: Main.ini
SDLGenerator/SDLGen/Include/: EInterfaceGenerator.h  ph_sdlgen.h
SDLGenerator/SDLGenCLI/: CMakeLists.txt  SdlGenArguments.cpp  SdlGenArguments.h  main.cpp
SDLGenerator/SDLGenCLI/Source/: SdlGenArguments.cpp  SdlGenArguments.h  main.cpp
Tool/FilmMerger/: CMakeLists.txt  README.md
Tool/FilmMerger/Source/: ProcessedArguments.cpp  ProcessedArguments.h  main.cpp
Tool/IntersectError/: CMakeLists.txt
Tool/IntersectError/Script/: make_report.py  requirements.txt
Tool/IntersectError/Source/: main.cpp
(+4838 files in other folders)
